@@ -46,14 +46,15 @@ article = don_get_object(a, 'html'); day0 = article.article_date.to_date %>
 <div class="section">
   <%= display_article_images(article) %>
   <%= auto_link article.body_to_html %>
-  <%= render("shared/authorhead", "article" => article) %>
   <%= render("shared/comment2", "article" => article) %>
-  <br clear='all'>
+  <div class="nndate">
+    <%= render("shared/authorhead", "article" => article) %>
+    <br clear='all'>
+  </div>
 </div> <!-- end section -->
 
 <% end %>
 <% end %>
-
 
 <% if @params['action'] =~ /(show_date|show_nnen)/ %>
 <div class="pagelink">
